# Brainstorming_Multi_Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  Workflow.md  comparison.md  docker-compose.yml  pyproject.toml  start_agents.bat
architect_agent/: __init__.py  __main__.py  architect_agent.py  example.env
critic_agent/: README.md  __init__.py  __main__.py  agent_executor.py  critic_agent.py  example.env
developer_agent/: __init__.py  __main__.py  developer_agent.py  example.env
host_agent/: README.md  __init__.py  __main__.py  agent_executor.py  example.env  orchestrator.py  remote_agent_connection.py
idea_agent/: README.md  __init__.py  __main__.py  agent_executor.py  example.env  idea_agent.py
logs/: README.md
nginx/: nginx.conf
prioritizer_agent/: README.md  __init__.py  __main__.py  agent_executor.py  example.env  prioritizer_agent.py
streamlit_app/: README.md  __init__.py  app.py  example.env
tester_agent/: __init__.py  __main__.py  example.env  tester_agent.py
utils/: __init__.py  logger.py  simple_executor.py
